# OthelloAI

./: .gitignore  CMakeLists.txt
include/: cl.h
include/model/: inference_model.hpp
include/opencl/: context.hpp
include/othello/: board.hpp  evaluator.hpp  greedy_evaluator.hpp  mcts.hpp  mctsnode.hpp
include/replay/: buffer.hpp
kernels/: add_numbers.cl
src/: main.cpp  remote_agent.cpp  train.cpp
src/model/: inference_model.cpp
src/opencl/: context.cpp
src/othello/: board.cpp  mcts.cpp
src/replay/: buffer.cpp
tests/: board_test.cpp  cl_test.cpp  inference_test.cpp  replay_buffer_test.cpp
tools/: embed_kernels.cpp  embed_model.cpp
